# Vreco_CPMD

./: .gitignore  Makefile  README  README.md  Roadmap.md  Vreco_CPMD.f90  configure.ac  mtd_restart_extract.f90  vreco.inp
example-1/: README  parvar_mtd
example-2/: README  colvar_mtd  vreco.inp  vreco.tiff
example-3/: V.final.cube  snap.tga  vreco.inp  vreco.vmd
src/: Makefile  Makefile.am  Vreco_CPMD.f90  mpiVrec  mpvrec  nompvrec  project.diff  prok.md  reco.F90
src/doc/: index.html  search.html
src/doc/interface/: get_potential.html  toproject.html
src/doc/lists/: files.html  modules.html  procedures.html  programs.html
src/doc/module/: kinds.html  pot_data.html
src/doc/proc/: get_potential.html  get_potential_dyn.html  get_potential_reg.html  toproject.html
src/doc/program/: mtdrest_extract.html  vreco.html
src/doc/sourcefile/: mtd_restart_extract.f90.html  vreco_cpmd.f90.html
src/doc/tipuesearch/: tipuesearch_content.js
src/examples/1/: fes-example-1.ps  mp  mpcallgraph  nomp  nompcallgraph  view_gnuplot_script  vreco.inp
src/examples/2/: mpivrec  nomp  test1  vreco.general  vreco.net
src/examples/3/: README  V.final.cube  V.final.cube.1  bleh.dot  blehmp.dot  colvar_mtd  hi  hi.f90  mp  mpcallgraph  mpvrec  mpvrecval  nomp  nompcallgraph  nompvrecval  parvar_mtd  scratch  test  vreco.inp.1
